# gub-agent

./: .env.example  .gitignore  CHANGELOG.md  README.md  deploy-dev.env  pyproject.toml
.githooks/: pre-commit
debug_client/: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tsconfig.json
debug_client/src/app/: globals.css  layout.tsx  page.tsx
debug_client/src/app/api/agent/: route.ts
debug_client/src/components/: AgentTrace.tsx
debug_client/src/lib/: trace.ts  vertex.ts
debug_client/src/lib/auth/: authClient.ts  tokenStore.ts  useAuth.ts
deployment/: register_agent.py
deployment/oauth-relay/: main.py
gub_agent/: __init__.py  agent.py  config.py  instruction_utils.py  requirements.txt
gub_agent/agents/: context_pruning.py  critic.py
gub_agent/prompts/: __init__.py  critic.py  executor.py
gub_agent/tools/: __init__.py  _client.py  accounts.py  discovery.py  org_query.py  staff.py
