[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gub-agent"
version = "0.1.0"
description = "GUB AI Agent — ADK agent for agency operations on Vertex AI Agent Engine"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
# Required for `adk deploy agent_engine` and the registration script
deploy = [
    "google-cloud-aiplatform>=1.70.0",
    "google-auth>=2.29.0",
    "requests>=2.31.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["gub_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
